--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@monaco-editor/react": "^4.6.0",
     "dagre": "^0.8.5",
     "electron-updater": "^6.1.7",
+    "monaco-editor": "^0.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.4"
